# jira-dep-graph

./: .gitignore  README.md  generate.sh  pyproject.toml
jira_dep_graph/: generate.py  graph.py  mermaid.py
