[tool.poetry]
name = "jira-dep-graph"
version = "0.1.0"
description = ""
authors = ["Jay Burgess <jason.burgess@jumpcloud.com>"]
readme = "README.md"
packages = [{include = "jira_dep_graph"}]

[tool.poetry.dependencies]
python = "^3.11"
jira = "^3.4"

[tool.poetry.scripts]
generate = "jira_dep_graph.generate:generate"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
